VM/lib/parser/VMParser.cpp

// Generated from ./VMParser.g4 by ANTLR 4.13.2


#include "VMParserVisitor.h"

#include "VMParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct VMParserStaticData final {
  VMParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  VMParserStaticData(const VMParserStaticData&) = delete;
  VMParserStaticData(VMParserStaticData&&) = delete;
  VMParserStaticData& operator=(const VMParserStaticData&) = delete;
  VMParserStaticData& operator=(VMParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag vmparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<VMParserStaticData> vmparserParserStaticData = nullptr;

void vmparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (vmparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(vmparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<VMParserStaticData>(
    std::vector<std::string>{
      "program", "stat", "expr", "variable", "while", "if", "struct", "array", 
      "arrayblock", "block", "functionparameters", "functionblock", "functiondefinition", 
      "returnexpression", "functionarguments", "accessObject", "functioncall"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'<'", 
      "'<='", "'>'", "'>='", "'='", "'!='", "'=='", "'&&'", "'||'", "'@_for'", 
      "'@si'", "'@_end'", "'@declare funcion'", "'@call'", "'@retornar'", 
      "'@estructura'", "'@array'", "'@'", "','", "';'", "':'", "'['", "']'", 
      "", "", "", "", "", "", "'@NNULL'", "", "'.'"
    },
    std::vector<std::string>{
      "", "LPAREN", "RPAREN", "START_BLOCK", "END_BLOCK", "SUM", "SUB", 
      "MUL", "DIV", "LESS", "LESSEQUAL", "GREATER", "GREATEREQUAL", "EQUAL", 
      "NEQ", "EQEQ", "AND", "OR", "RW_FOR", "RW_IF", "RW_END", "RW_DECLAREFUNCTION", 
      "RW_CALLFUNCTION", "RW_RETURN", "RW_STRUCTURE", "RW_ARRAY", "RESERVEDWORDS", 
      "COMMA", "SEMICOLON", "COLON", "LBRACKET", "RBRACKET", "LINE_COMMENT", 
      "STRING", "COMMENT", "ID", "NUMBER", "BOOL", "NULL", "WS", "DOT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  vmparserParserStaticData = std::move(staticData);
}

}

VMParser::VMParser(TokenStream *input) : VMParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

VMParser::VMParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  VMParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *vmparserParserStaticData->atn, vmparserParserStaticData->decisionToDFA, vmparserParserStaticData->sharedContextCache, options);
}

VMParser::~VMParser() {
  delete _interpreter;
}

const atn::ATN& VMParser::getATN() const {
  return *vmparserParserStaticData->atn;
}

std::string VMParser::getGrammarFileName() const {
  return "VMParser.g4";
}

const std::vector<std::string>& VMParser::getRuleNames() const {
  return vmparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& VMParser::getVocabulary() const {
  return vmparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView VMParser::getSerializedATN() const {
  return vmparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

VMParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VMParser::ProgramContext::EOF() {
  return getToken(VMParser::EOF, 0);
}

std::vector<VMParser::StatContext *> VMParser::ProgramContext::stat() {
  return getRuleContexts<VMParser::StatContext>();
}

VMParser::StatContext* VMParser::ProgramContext::stat(size_t i) {
  return getRuleContext<VMParser::StatContext>(i);
}


size_t VMParser::ProgramContext::getRuleIndex() const {
  return VMParser::RuleProgram;
}


std::any VMParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

VMParser::ProgramContext* VMParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, VMParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 524051808256) != 0)) {
      setState(34);
      stat();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(40);
    match(VMParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

VMParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

VMParser::VariableContext* VMParser::StatContext::variable() {
  return getRuleContext<VMParser::VariableContext>(0);
}

VMParser::WhileContext* VMParser::StatContext::while_() {
  return getRuleContext<VMParser::WhileContext>(0);
}

VMParser::FunctiondefinitionContext* VMParser::StatContext::functiondefinition() {
  return getRuleContext<VMParser::FunctiondefinitionContext>(0);
}

VMParser::ExprContext* VMParser::StatContext::expr() {
  return getRuleContext<VMParser::ExprContext>(0);
}

VMParser::IfContext* VMParser::StatContext::if_() {
  return getRuleContext<VMParser::IfContext>(0);
}

VMParser::StructContext* VMParser::StatContext::struct_() {
  return getRuleContext<VMParser::StructContext>(0);
}

VMParser::ReturnexpressionContext* VMParser::StatContext::returnexpression() {
  return getRuleContext<VMParser::ReturnexpressionContext>(0);
}


size_t VMParser::StatContext::getRuleIndex() const {
  return VMParser::RuleStat;
}


std::any VMParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

VMParser::StatContext* VMParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, VMParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(42);
      variable();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(43);
      while_();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(44);
      functiondefinition();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(45);
      expr(0);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(46);
      if_();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(47);
      struct_();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(48);
      returnexpression();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

VMParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t VMParser::ExprContext::getRuleIndex() const {
  return VMParser::RuleExpr;
}

void VMParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IdExpContext ------------------------------------------------------------------

tree::TerminalNode* VMParser::IdExpContext::ID() {
  return getToken(VMParser::ID, 0);
}

VMParser::IdExpContext::IdExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::IdExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitIdExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionCallExpContext ------------------------------------------------------------------

VMParser::FunctioncallContext* VMParser::FunctionCallExpContext::functioncall() {
  return getRuleContext<VMParser::FunctioncallContext>(0);
}

VMParser::FunctionCallExpContext::FunctionCallExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::FunctionCallExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitFunctionCallExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicExpContext ------------------------------------------------------------------

std::vector<VMParser::ExprContext *> VMParser::LogicExpContext::expr() {
  return getRuleContexts<VMParser::ExprContext>();
}

VMParser::ExprContext* VMParser::LogicExpContext::expr(size_t i) {
  return getRuleContext<VMParser::ExprContext>(i);
}

tree::TerminalNode* VMParser::LogicExpContext::LESS() {
  return getToken(VMParser::LESS, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::LESSEQUAL() {
  return getToken(VMParser::LESSEQUAL, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::GREATER() {
  return getToken(VMParser::GREATER, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::GREATEREQUAL() {
  return getToken(VMParser::GREATEREQUAL, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::EQEQ() {
  return getToken(VMParser::EQEQ, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::NEQ() {
  return getToken(VMParser::NEQ, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::AND() {
  return getToken(VMParser::AND, 0);
}

tree::TerminalNode* VMParser::LogicExpContext::OR() {
  return getToken(VMParser::OR, 0);
}

VMParser::LogicExpContext::LogicExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::LogicExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitLogicExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StringExpContext ------------------------------------------------------------------

tree::TerminalNode* VMParser::StringExpContext::STRING() {
  return getToken(VMParser::STRING, 0);
}

VMParser::StringExpContext::StringExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::StringExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitStringExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AccessObjectExpContext ------------------------------------------------------------------

VMParser::AccessObjectContext* VMParser::AccessObjectExpContext::accessObject() {
  return getRuleContext<VMParser::AccessObjectContext>(0);
}

VMParser::AccessObjectExpContext::AccessObjectExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::AccessObjectExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitAccessObjectExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BooleanExpContext ------------------------------------------------------------------

tree::TerminalNode* VMParser::BooleanExpContext::BOOL() {
  return getToken(VMParser::BOOL, 0);
}

VMParser::BooleanExpContext::BooleanExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::BooleanExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitBooleanExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NullExpContext ------------------------------------------------------------------

tree::TerminalNode* VMParser::NullExpContext::NULL_() {
  return getToken(VMParser::NULL_, 0);
}

VMParser::NullExpContext::NullExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::NullExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitNullExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberExpContext ------------------------------------------------------------------

tree::TerminalNode* VMParser::NumberExpContext::NUMBER() {
  return getToken(VMParser::NUMBER, 0);
}

VMParser::NumberExpContext::NumberExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::NumberExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitNumberExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MathExpContext ------------------------------------------------------------------

std::vector<VMParser::ExprContext *> VMParser::MathExpContext::expr() {
  return getRuleContexts<VMParser::ExprContext>();
}

VMParser::ExprContext* VMParser::MathExpContext::expr(size_t i) {
  return getRuleContext<VMParser::ExprContext>(i);
}

tree::TerminalNode* VMParser::MathExpContext::MUL() {
  return getToken(VMParser::MUL, 0);
}

tree::TerminalNode* VMParser::MathExpContext::DIV() {
  return getToken(VMParser::DIV, 0);
}

tree::TerminalNode* VMParser::MathExpContext::SUM() {
  return getToken(VMParser::SUM, 0);
}

tree::TerminalNode* VMParser::MathExpContext::SUB() {
  return getToken(VMParser::SUB, 0);
}

VMParser::MathExpContext::MathExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::MathExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitMathExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrayExpContext ------------------------------------------------------------------

VMParser::ArrayContext* VMParser::ArrayExpContext::array() {
  return getRuleContext<VMParser::ArrayContext>(0);
}

VMParser::ArrayExpContext::ArrayExpContext(ExprContext *ctx) { copyFrom(ctx); }


std::any VMParser::ArrayExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitArrayExp(this);
  else
    return visitor->visitChildren(this);
}

VMParser::ExprContext* VMParser::expr() {
   return expr(0);
}

VMParser::ExprContext* VMParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  VMParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  VMParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, VMParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<NumberExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(52);
      match(VMParser::NUMBER);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<BooleanExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(53);
      match(VMParser::BOOL);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<StringExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(54);
      match(VMParser::STRING);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<IdExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(55);
      match(VMParser::ID);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<NullExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(56);
      match(VMParser::NULL_);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<AccessObjectExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(57);
      accessObject();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<ArrayExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(58);
      array();
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<FunctionCallExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      functioncall();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(70);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(68);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MathExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(62);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(63);
          antlrcpp::downCast<MathExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 480) != 0))) {
            antlrcpp::downCast<MathExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(64);
          expr(3);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<LogicExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(65);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(66);
          antlrcpp::downCast<LogicExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & 253440) != 0))) {
            antlrcpp::downCast<LogicExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(67);
          expr(2);
          break;
        }

        default:
          break;
        } 
      }
      setState(72);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

VMParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> VMParser::VariableContext::ID() {
  return getTokens(VMParser::ID);
}

tree::TerminalNode* VMParser::VariableContext::ID(size_t i) {
  return getToken(VMParser::ID, i);
}

tree::TerminalNode* VMParser::VariableContext::COLON() {
  return getToken(VMParser::COLON, 0);
}

std::vector<tree::TerminalNode *> VMParser::VariableContext::SEMICOLON() {
  return getTokens(VMParser::SEMICOLON);
}

tree::TerminalNode* VMParser::VariableContext::SEMICOLON(size_t i) {
  return getToken(VMParser::SEMICOLON, i);
}

tree::TerminalNode* VMParser::VariableContext::NUMBER() {
  return getToken(VMParser::NUMBER, 0);
}

std::vector<VMParser::ExprContext *> VMParser::VariableContext::expr() {
  return getRuleContexts<VMParser::ExprContext>();
}

VMParser::ExprContext* VMParser::VariableContext::expr(size_t i) {
  return getRuleContext<VMParser::ExprContext>(i);
}


size_t VMParser::VariableContext::getRuleIndex() const {
  return VMParser::RuleVariable;
}


std::any VMParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

VMParser::VariableContext* VMParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 6, VMParser::RuleVariable);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(73);
      match(VMParser::ID);
      setState(74);
      match(VMParser::COLON);
      setState(75);
      antlrcpp::downCast<VariableContext *>(_localctx)->hint = match(VMParser::ID);
      setState(76);
      match(VMParser::SEMICOLON);
      setState(77);
      match(VMParser::NUMBER);
      setState(78);
      match(VMParser::SEMICOLON);
      setState(79);
      antlrcpp::downCast<VariableContext *>(_localctx)->REF = expr(0);
      setState(80);
      match(VMParser::SEMICOLON);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(82);
      match(VMParser::ID);
      setState(83);
      match(VMParser::SEMICOLON);
      setState(84);
      expr(0);
      setState(85);
      match(VMParser::SEMICOLON);
      setState(86);
      antlrcpp::downCast<VariableContext *>(_localctx)->REF = expr(0);
      setState(87);
      match(VMParser::SEMICOLON);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileContext ------------------------------------------------------------------

VMParser::WhileContext::WhileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VMParser::WhileContext::RW_FOR() {
  return getToken(VMParser::RW_FOR, 0);
}

std::vector<tree::TerminalNode *> VMParser::WhileContext::SEMICOLON() {
  return getTokens(VMParser::SEMICOLON);
}

tree::TerminalNode* VMParser::WhileContext::SEMICOLON(size_t i) {
  return getToken(VMParser::SEMICOLON, i);
}

VMParser::BlockContext* VMParser::WhileContext::block() {
  return getRuleContext<VMParser::BlockContext>(0);
}

std::vector<tree::TerminalNode *> VMParser::WhileContext::ID() {
  return getTokens(VMParser::ID);
}

tree::TerminalNode* VMParser::WhileContext::ID(size_t i) {
  return getToken(VMParser::ID, i);
}

std::vector<tree::TerminalNode *> VMParser::WhileContext::NUMBER() {
  return getTokens(VMParser::NUMBER);
}

tree::TerminalNode* VMParser::WhileContext::NUMBER(size_t i) {
  return getToken(VMParser::NUMBER, i);
}


size_t VMParser::WhileContext::getRuleIndex() const {
  return VMParser::RuleWhile;
}


std::any VMParser::WhileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitWhile(this);
  else
    return visitor->visitChildren(this);
}

VMParser::WhileContext* VMParser::while_() {
  WhileContext *_localctx = _tracker.createInstance<WhileContext>(_ctx, getState());
  enterRule(_localctx, 8, VMParser::RuleWhile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(VMParser::RW_FOR);
    setState(92);
    match(VMParser::SEMICOLON);
    setState(93);
    antlrcpp::downCast<WhileContext *>(_localctx)->CONTROL = match(VMParser::ID);
    setState(94);
    match(VMParser::SEMICOLON);
    setState(95);
    antlrcpp::downCast<WhileContext *>(_localctx)->FROM = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == VMParser::ID

    || _la == VMParser::NUMBER)) {
      antlrcpp::downCast<WhileContext *>(_localctx)->FROM = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(96);
    match(VMParser::SEMICOLON);
    setState(97);
    antlrcpp::downCast<WhileContext *>(_localctx)->TO = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == VMParser::ID

    || _la == VMParser::NUMBER)) {
      antlrcpp::downCast<WhileContext *>(_localctx)->TO = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(98);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfContext ------------------------------------------------------------------

VMParser::IfContext::IfContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VMParser::IfContext::RW_IF() {
  return getToken(VMParser::RW_IF, 0);
}

tree::TerminalNode* VMParser::IfContext::SEMICOLON() {
  return getToken(VMParser::SEMICOLON, 0);
}

VMParser::BlockContext* VMParser::IfContext::block() {
  return getRuleContext<VMParser::BlockContext>(0);
}

std::vector<VMParser::ExprContext *> VMParser::IfContext::expr() {
  return getRuleContexts<VMParser::ExprContext>();
}

VMParser::ExprContext* VMParser::IfContext::expr(size_t i) {
  return getRuleContext<VMParser::ExprContext>(i);
}


size_t VMParser::IfContext::getRuleIndex() const {
  return VMParser::RuleIf;
}


std::any VMParser::IfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<VMParserVisitor*>(visitor))
    return parserVisitor->visitIf(this);
  else
    return visitor->visitChildren(this);
}

VMParser::IfContext* VMParser::if_() {
  IfContext *_localctx = _tracker.createInstance<IfContext>(_ctx, getState());
  enterRule(_localctx, 10, VMParser::RuleIf);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(VMParser::RW_IF);
    setState(101);
    match(VMParser::SEMICOLON);
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 524023758848) != 0)) {
      setState(102);
      antlrcpp::downCast<IfContext *>(_localctx)->cond = expr(0);
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(108);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructContext ------------------------------------------------------------------

VMParser::StructContext::StructContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* VMParser::StructContext::RW_STRUCTURE() {
  return getToken(VMParser::RW_STRUCTURE, 0);
}
